--- a/README
+++ b/README
@@ -1,13 +1,23 @@
-Purpose of the Project
+Purpose of the Script
 ======================
 To automate the file-creation process for your Sphinx documentation.  Helpful when you use the "glob" feature in Sphinx, where the tool automatically picks up all the files from the source directory.
 
 If you have a list of topics in your mind(on which you have to create documentation), then just list those topics in a topics.txt file. The script will create the documentaion's rst files. The generated rst files will have some sample content, taken from template.txt file.
 
-How the script works
+Required Software
+==================
+Python 2.7.x
+Sphinx 1.1.x
+
+How to use the Script
 =====================
 You need to first edit/create the following files:
 
 * topics.txt : List down the topics on which you want to write the documentation. The topic will be the title of each rst file.
 
 * template.txt : Include only the common sub-headings. Do not include the title. The title will be taken from the topics.txt.
+
+Once you've done editing the above two files, just run the create_rst_files.py script. For eg, if you have listed 20 topics in the topics.txt file, then you should see 20 .rst files named based on the topic name. Each of these .rst files will have a title (taken from the topics.txt file), and the sub-headings are taken from the template.txt file.
+
+
+
